issue (md styles): fix bug image overflow the container

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -456,6 +456,7 @@ picture {
     }
     img{
         max-width: calc(100vw - 8rem);
+        width: 100%
     }
     ol{
         color: var(--color_secondary);
